--- a/index.css
+++ b/index.css
@@ -1,19 +1,21 @@
 body {
-    background-color: lightblue
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: lightgray;
     font-weight: bold;
     text-align: center;
+    margin-top: 10vw;
+    line-height: 30px;
 }
 
 h1 {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
+
 }
 
 h2 {
     font-size: 50px;
     margin-top: 0;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 button {
@@ -33,8 +35,9 @@ button {
 
 #save-btn {
     background: darkgreen;
+}
 
-
-#message-el {
+#message-about {
     text-decoration: none;
+    margin-top: 30px;
 }
